<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MobileAuthentication">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="375dp"
        android:layout_height="159dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/rounded_rectangle_box"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Mobile_Number_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:text="@string/enter_your_mobile_number"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Mobile_Number_EditTextView"
            android:layout_width="288dp"
            android:layout_height="36dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rectangle_box"
            android:ems="10"
            android:hint="@string/_987_654_3210"
            android:inputType="phone" />

        <TextView
            android:id="@+id/Country_Code_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rectangle_box"
            android:paddingTop="4dp"
            android:text="@string/_91"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Quote"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:text="@string/you_won_t_be_able_to_verified_documents_using_your_mobile_number_authentication"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/NextButton"
        android:layout_width="117dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_button"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:text="@string/for_fetching_verified_documents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NextButton" />

    <Button
        android:id="@+id/Continue_with_adharButton"
        android:layout_width="264dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/white_rounded_button"
        android:text="@string/continue_with_aadhar"
        android:textColor="#6200EE"
        android:textStyle="bold"
        app:backgroundTint="#F3EFEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />
</androidx.constraintlayout.widget.ConstraintLayout>